--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
 
