--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation "com.airbnb.android:lottie:3.4.0"
+
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
     //noinspection GradleCompatible
